# geodata

./: .gitignore  README.md  __init__.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/geodata/: index.html
api/geolevel/: index.html
api/geolocator/: index.html
contributing/: index.html
docs/wiki/: contributing.md  examples.md  faq.md  index.md  install.md  license.md  quickstart.md
docs/wiki/api/: geocoords.md  geodata.md  geolevel.md  geolocator.md  quality.md
docs/wiki/assets/stylesheets/: github.css
examples/: index.html
geodata/: __init__.py  base.py
geodata/core/: __init__.py  base.py  geolevel.py  locator.py  quality.py  types.py
geodata/utils/: __init__.py  geocoords.py
quickstart/: index.html
scripts/: generate_banner.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api/geocoords/: index.html
site/api/geodata/: index.html
site/api/geolevel/: index.html
site/api/geolocator/: index.html
site/api/quality/: index.html
site/contributing/: index.html
site/examples/: index.html
site/faq/: index.html
site/install/: index.html
site/license/: index.html
site/quickstart/: index.html
site/search/: search_index.json
src/: base.py
src/core/: __init__.py  types.py
tests/: test_geodata.py
